updated code to use neon db

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -5,7 +5,7 @@ RAZORPAY_KEY_ID=rzp_test_xxxxxxxxxxxx
 RAZORPAY_KEY_SECRET=xxxxxxxxxxxxxxxx
 
 # PostgreSQL connection string
-DATABASE_URL=postgres://postgres:Sourya7667@@localhost:5432/etreasure?sslmode=disable
+DATABASE_URL=psql 'postgresql://neondb_owner:npg_21kiVBMyQDgp@ep-rough-block-a4oaas7o-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # JWT secrets (change in production)
 JWT_SECRET=ethnictr19967
