--- a/web/package.json
+++ b/web/package.json
@@ -12,15 +12,15 @@
     "preview:admin": "astro preview --config astro.admin.config.mjs --port 3001"
   },
   "dependencies": {
+    "astro": "^4.16.0",
+    "@astrojs/node": "^8.2.3",
     "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^5.0.0",
-    "@astrojs/node": "^9.0.0",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "astro": "^4.8.0",
-    "autoprefixer": "^10.4.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.0"
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.22"
   }
 }
