--- a/web/package.json
+++ b/web/package.json
@@ -1,26 +1,24 @@
 {
   "name": "etreasure1",
+  "private": true,
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "dev:admin": "astro dev --config astro.admin.config.mjs",
-    "build:admin": "astro build --config astro.admin.config.mjs",
-    "preview:admin": "astro preview --config astro.admin.config.mjs --port 3001"
+    "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.16.0",
-    "@astrojs/node": "^8.2.3",
-    "@astrojs/react": "^4.4.2",
-    "@astrojs/tailwind": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.22"
+    "@astrojs/node": "8.3.1",
+    "@astrojs/react": "3.6.0",
+    "@astrojs/tailwind": "3.0.0",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "astro": "4.15.0",
+    "autoprefixer": "10.4.22",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.0",
+    "typescript": "^5.9.3"
   }
 }
