--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@astrojs/node": "8.3.1",
     "@astrojs/react": "3.6.0",
-    "@astrojs/tailwind": "3.0.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "astro": "4.15.0",
