--- a/admin/package.json
+++ b/admin/package.json
@@ -10,25 +10,27 @@
     "lint": "eslint src --ext ts,tsx --max-warnings=0"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2",
+    "@apollo/client": "^3.8.8",
     "@tanstack/react-query": "^5.61.0",
     "@tiptap/react": "^2.10.0",
-    "@tiptap/starter-kit": "^2.10.0"
+    "@tiptap/starter-kit": "^2.10.0",
+    "graphql": "^16.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "vite": "^6.0.5",
-    "vitest": "^2.1.8",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "jsdom": "^26.0.0"
+    "vitest": "^2.1.8"
   }
 }
