--- a/web/.env.sample
+++ b/web/.env.sample
@@ -1,3 +1,3 @@
 # Frontend environment sample
 VITE_RAZORPAY_KEY_ID=rzp_test_xxxxxxxxxxxx
-VITE_R2_PUBLIC_BASE_URL=https://static.ethnictreasures.co.in
+VITE_R2_PUBLIC_BASE_URL=https://pub-1a3924a6c6994107be6fe9f3ed794c0a.r2.dev
