--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/node": "8.3.1",
+    "@astrojs/node": "^8.3.1",
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "@types/react": "18.2.45",
