--- a/web/package.json
+++ b/web/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.3.1",
-    "@astrojs/react": "3.6.0",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "4.15.0",
     "autoprefixer": "10.4.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.4.0",
     "typescript": "^5.9.3"
   }
