updated code to use live backend url

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,2 +1,2 @@
-PUBLIC_API_URL=http://localhost:8080
+PUBLIC_API_URL=https://etreasure-1.onrender.com
 PUBLIC_R2_BASE_URL=https://pub-1a3924a6c6994107be6fe9f3ed794c0a.r2.dev
